aws/argocd/apache-manifests/base/apache-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
  namespace: ingress-nginx
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-1
      protocol: HTTPS
      port: 443
      hostname: "ui.dev.cnxs.vpcaas.fcs.gsa.gov"
      tls:
        certificateRefs:
          - kind: Secret
            name: devwildcard
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-app-route-1
  namespace: ingress-nginx
spec:
  parentRefs:
    - name: tls-gateway
  hostnames:
    - "ui.dev.cnxs.vpcaas.fcs.gsa.gov"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: conexus-httpd
          port: 80
